Remove connection with endpoint that do not exist 2